--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
@@ -35,12 +35,12 @@
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion Fisica de Capacitacion</p>
                             </div>
                         </div>
-<!--                        <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo de Capacitacion:</label>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Capacitacion:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${codigocapacitacion.codigocapacitacion}">Codigo de Capacitacion</p>
+                                <p class="form-control-static" th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Codigo de Capacitacion</p>
                             </div>
-                        </div>-->
+                        </div>
                         
                         
 
