--- a/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
@@ -120,7 +120,7 @@
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Codigo de Capacitador:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capacitacion.codigocapacitador}">Codigo de Capacitador</p>
+                                <p class="form-control-static" th:text="${capacitacion.codigocapacitador.codigoempleado.nombreempleado}">Nombre de Capacitador</p>
                             </div>
                         </div>
                  
