--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
@@ -41,12 +41,13 @@
                                 <p class="form-control-static" th:text="${costocapacitacion.costocapacitador}">Costo Capacitador</p>
                             </div>
                         </div>
-<!--                        <div class="form-group">
+                        <div class="form-group">
                             <label class="col-sm-5 control-label">Codigo de Capacitacion:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${costocapacitacion.codigocapacitacion.codigocapacitacion}">codigo de capacitacion</p>
+                               <p class="form-control-static" th:text="${costocapacitacion.codigocapacitacion.nombrecapacitacion}">codigo de capacitacion</p>
+                                <!--<p class="form-control-static" th:text="${costocapacitacion.codigocapacitacion.codigocapacitacion}">codigo de capacitacion</p>-->
                             </div>
-                        </div>-->
+                        </div>
 
                        
                     </div> 
