--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -30,7 +30,7 @@
                          <div class="row text-center">
                         <div class="">
                             <h2>Ministerio de Justicia y Seguridad Publica</h2>
-                            <h2>Departamento de Recursos Humanos</h2>
+                            <h2>Direccion de Recursos Humanos</h2>
                             <h2>SISADMRH</h2>
                         </div>
                     </div>
