--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -12,10 +12,9 @@
             <table class="table table-striped">
                 <tr>
                     <th>Codigo de Asistencia de Capacitacion</th>
-<!--                    <th>Codigo Capacitacion</th>-->
                     <th>Horas Recibidas</th>
                     <th>Ubicacion Asistentes Capacitacion</th>
-
+                    <th>Capacitacion</th>
                     <th>Acciones</th>
 
                 </tr>
@@ -23,7 +22,7 @@
                     <td th:text="${asistenciacapacitacion.codigoasistenciacapacitacion}">Codigo</td>
                     <td th:text="${asistenciacapacitacion.horasrecibidas}">Horas Recibidas</td>
                     <td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion de Capacitacion</td>
-<!--                    <td th:text="${asistenciacapacitacion.codigocapacitacion}">Codigo Capacitacion</td>-->
+                    <td th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Capacitacion</td>
 
 
                     <td>
