--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -13,16 +13,16 @@
     </div> 
         <div class="col-md-8">
             
-          <h3 align="center">Detalle De Asistencias de Capacitacion</h3>
+          <h3 align="center">Nueva Asistencias de Capacitacion</h3>
     <div>
         <form class="form-horizontal" th:object="${asistenciacapacitacion}" th:action="@{../asistenciacapacitacion}" method="post">
 <!--          <input type="hidden" th:field="*{codigoasistenciacapacitacion}"/>-->
             <!--  <input type="hidden" th:field="*{nombrecomite}"/>-->
             
             <div class="form-group">
-                <label class="col-sm-2 control-label">Horas Recibidas:</label>
+                <label class="col-sm-2 control-label ">Horas Recibidas:</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" th:field="*{horasrecibidas}"/>
+                    <input type="text" class="form-control numeros" required="true" th:field="*{horasrecibidas}"/>
                 </div>
             </div>
            
@@ -30,7 +30,7 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Ubicacion Fisica de las asistencias:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{ubicacionasistenciacapacitacion}"/>
+                    <input type="text" class="form-control" required="true" th:field="*{ubicacionasistenciacapacitacion}"/>
                 </div>
             </div>
             <div class="form-group">
@@ -39,6 +39,15 @@
                     <input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>
                 </div>
             </div>
+             <div class="form-group">
+                <label class="col-sm-2 control-label">Responsable del Comite:</label>
+                                     <div class="col-sm-10">
+                                         <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
+                                <option th:each="c:${capacitaciones}" placeholder="Seleccionar capacitacion" th:value="${c.codigocapacitacion" th:text="${c.nombreempleado}"></option>
+                            </select>
+               <!--<input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>-->
+                                          </div>
+                                </div>
             
            
             <div class="col-md-12">
