--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -25,9 +25,12 @@
                                 </div>-->
 
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Codigo de Empleado:</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" onkeypress="return valida(event)" th:field="*{codigoempleado.codigoempleado}"/>
+                        <label class="col-sm-2 control-label">Empleado Responsable del Capacitador:</label>
+                        <div class="col-sm-10" >
+                            <select class="form-control"  th:field="*{codigoempleado.codigoempleado}" >
+                                <option th:each="c:${empleados}" th:value="${c.codigoempleado}" th:text="${c.nombreempleado}"></option>
+                            </select>
+                            <!--<input type="text" class="form-control" onkeypress="return valida(event)" th:field="*{codigoempleado.codigoempleado}"/>-->
                         </div>
                     </div>
 
@@ -42,7 +45,7 @@
                         <label class="col-sm-2 control-label">Tema de Dominio(*):</label>
                         <div class="col-sm-4">
                             <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
-                            <select class="form-control" name="temadominio" >
+                            <select class="form-control"  required="true" name="temadominio" >
                                 <option>Terapia Psicologia</option>
                                 <option>Desarrollo Personal</option>
                                 <option>Derechos laborales</option>
@@ -55,7 +58,7 @@
                         <label class="col-sm-2 control-label">Institucion(*):</label>
                         <div class="col-sm-4">
 
-                            <select class="form-control" name="institucioncapacitador" >
+                            <select class="form-control" required="true" name="institucioncapacitador" >
                                 <option>Publico</option>
                                 <option>Privado</option>
                                 <option>Red</option>
@@ -67,7 +70,7 @@
                         <label class="col-sm-2 control-label">Tipo Capacitador(*):</label>
                         <div class="col-sm-4">
 
-                            <select class="form-control" name="tipocapacitador" >
+                            <select class="form-control" required="true" name="tipocapacitador" >
                                 <option>Interno</option>
                                 <option>Publico</option>
                                 <option>Privado</option>
@@ -79,7 +82,7 @@
                         <label class="col-sm-2 control-label">Tipo Agrupacion(*):</label>
                         <div class="col-sm-4">
 
-                            <select class="form-control" name="tipoagrupacion" >
+                            <select class="form-control" required="true"name="tipoagrupacion" >
                                 <option>Interno</option>
                                 <option>Publico</option>
                                 <option>Privado</option>
@@ -90,42 +93,42 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Dui:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" th:field="*{duicapacitador}"/>
+                            <input type="text" class="form-control num_dui" required="true" th:field="*{duicapacitador}"/>
                              <small class="form-text text-danger" th:if="${#fields.hasErrors('duicapacitador')}" th:errors="*{duicapacitador}"></small>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Nit:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" th:field="*{nitcapacitador}"/>
+                            <input type="text" class="form-control num_nit" required="true"th:field="*{nitcapacitador}"/>
                              <small class="form-text text-danger" th:if="${#fields.hasErrors('nitcapacitador')}" th:errors="*{nitcapacitador}"></small>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Carnet:</label>
                         <div class="col-sm-10">
-                            <input type="number" class="form-control" onkeypress="return valida(event)" th:field="*{carnetresidencia}"/>
+                            <input type="text" class="form-control numeros" required="true" onkeypress="return valida(event)" th:field="*{carnetresidencia}"/>
                               <small class="form-text text-danger" th:if="${#fields.hasErrors('carnetresidencia')}" th:errors="*{carnetresidencia}"></small>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Telefono:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" th:field="*{telefonocapacitador}"/>
+                            <input type="text" class="form-control num_telefono" required="true" th:field="*{telefonocapacitador}"/>
                             <small class="form-text text-danger" th:if="${#fields.hasErrors('telefonocapacitador')}" th:errors="*{telefonocapacitador}"></small>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Movil:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" th:field="*{telefonomovilcapacitador}"/>
+                            <input type="text" class="form-control num_telefono" required="true" th:field="*{telefonomovilcapacitador}"/>
                             <small class="form-text text-danger" th:if="${#fields.hasErrors('telefonomovilcapacitador')}" th:errors="*{telefonomovilcapacitador}"></small>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Email:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" th:field="*{emailcapacitador}"/>
+                            <input type="email" class="form-control" size="200" maxlength="200" required="true" th:field="*{emailcapacitador}"/>
                              <!--<small class="form-text text-danger" th:if="${#fields.hasErrors('emailcapacitador')}" th:errors="*{emailcapacitador}"></small>-->
                         </div>
                     </div>
