--- a/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
@@ -19,83 +19,92 @@
             <form class="form-horizontal">
 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Codigo Capacitador:</label>
+                    <label class="col-sm-2 control-label">Codigo capacitador:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.codigocapacitador}">codigo capacitador</p></div>
+                        <p class="" th:text="${capacitador.codigocapacitador}">codigo capacitador</p></div>
+                    <!--<p class="" th:text="${capacitador.codigoempleado.nombreempleado}">codigo capacitador</p></div>-->
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Nombre:</label>
+                    <label class="col-sm-2 control-label">Nombre Capacitador:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.nombrecapacitador}">Nombre</p>
+                        <p class="" th:text="${capacitador.nombrecapacitador}">Nombre</p>
                     </div>
                 </div>
+  <div class="form-group">
+                                    <label class="col-sm-2 control-label">EmpleadoCapacitador</label>
+                                    <div class="col-sm-10">
+                                        <p class="form-control-static" th:text="${capacitador.codigoempleado.nombreempleado}">Codigo Empleado</p>
+                                         <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
+                                    </div>
+                                </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Tema de dominio:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.temadominio}">Tema de dominio</p>
+                        <p class="" th:text="${capacitador.temadominio}">Tema de dominio</p>
                     </div>
                 </div>
                          <div class="form-group">
                     <label class="col-sm-2 control-label">Institucion:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.institucioncapacitador}">Institucion</p>
+                        <p class="" th:text="${capacitador.institucioncapacitador}">Institucion</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Tipo Capacitador:</label>
+                    <label class="col-sm-2 control">Tipo Capacitador:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.tipocapacitador}">Tipo Capacitador</p>
+                        <p class="" th:text="${capacitador.tipocapacitador}">Tipo Capacitador</p>
                     </div>
                 </div>
                      <div class="form-group">
-                    <label class="col-sm-2 control-label">Tipo Agrupacion:</label>
+                    <label class="col-sm-2 control">Tipo Agrupacion:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.tipoagrupacion}">Tipo Capacitador</p>
+                        <p class="" th:text="${capacitador.tipoagrupacion}">Tipo Capacitador</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Dui:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.duicapacitador}">Dui</p>
+                        <p class="" th:text="${capacitador.duicapacitador}">Dui</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Nit:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.nitcapacitador}">Nit</p>
+                        <p class="" th:text="${capacitador.nitcapacitador}">Nit</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Carnet de Residencia:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.carnetresidencia}">Carnet de Residencia</p>
+                        <p class="" th:text="${capacitador.carnetresidencia}">Carnet de Residencia</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Telefono Fijo:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.telefonocapacitador}">Telefono Fijo</p>
+                        <p class="" th:text="${capacitador.telefonocapacitador}">Telefono Fijo</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Telefono Movil:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.telefonomovilcapacitador}">Telefono Movil</p>
+                        <p class="" th:text="${capacitador.telefonomovilcapacitador}">Telefono Movil</p>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Correo Electronico:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.emailcapacitador}">Correo Electronico</p>
+                        <p class="" th:text="${capacitador.emailcapacitador}">Correo Electronico</p>
                     </div>
                 </div>
-                <!--                 <div class="form-group">
-                                    <label class="col-sm-2 control-label">Codigo Empleado</label>
+                               <div class="form-group">
+                                    <label class="col-sm-2 control-label">EmpleadoCapacitador</label>
                                     <div class="col-sm-10">
-                                        <p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>
+                                        <p class="form-control-static" th:text="${capacitador.codigoempleado.nombreempleado}">Codigo Empleado</p>
+                                         <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
                                     </div>
-                                </div>-->
+                                </div>
               
             </form>
               <div class="col-md-12">
