--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+   <script type="text/javascript" th:src="@{/validacion_controladores.js}"></script>
+   <script type="text/javascript" th:src="@{/validacion_controladores2.js}"></script>
+   <script type="text/javascript" th:src="@{/SweetAlert.min.js}"></script>
+   <script type="text/javascript" th:src="@{/jquery-ui.min.js}"></script>
   
 <head lang="en">
 
@@ -12,7 +16,7 @@
          <th:block th:include="../templates/menu"></th:block>
     </div> 
         <div class="col-md-8">
-             <h3 align="center">Detalle comite</h3>
+             <h3 align="center" >Llene El Formulario de Comite</h3>
     <div>
         <form class="form-horizontal" th:object="${comite}" th:action="@{../comite}" method="post">
 <!--          <input type="hidden" th:field="*{codigocomite}"/>-->
@@ -20,38 +24,47 @@
              <div class="form-group">
                 <label class="col-sm-2 control-label">DUI:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="dui" th:field="*{dui}"/>
+                    <input type="text" size="17" maxlength="17" class="form-control num_dui" id="dui" placeholder="XXXXXXX-X" th:field="*{dui}"/>
                 </div>
             </div>
              <div class="form-group">
                 <label class="col-sm-2 control-label">NIT:</label>
                 <div class="col-sm-10">
-                    <input type="text"  class="form-control" id="nit" th:field="*{nit}"/>
+                    <input type="text"  class="form-control num_nit"  id="nit"  placeholder="XXXX-XXXXXX-XXX-X"  th:field="*{nit}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nombre de comite:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{nombrecomite}"/>
+                    <input type="text" class="form-control" size="30" maxlength="30" required="true" placeholder="Escriba El nombre del Comite"  th:field="*{nombrecomite}"/>
                 </div>
             </div>
             <div class="form-group">
+                <label class="col-sm-2 control-label">Responsable del Comite:</label>
+                                     <div class="col-sm-10">
+                                         <select class="form-control" th:field="*{codigoempleado.codigoempleado}" >
+                                <option th:each="c:${empleados}" placeholder="Seleccione El Responsable del Comite" th:value="${c.codigoempleado}" th:text="${c.nombreempleado}"></option>
+                            </select>
+               <!--<input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>-->
+                                          </div>
+                                </div>
+<!--            <div class="form-group">
                 <label class="col-sm-2 control-label">Responsable:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{responsablecomite}"/>
+                    <input type="text" class="form-control" required="true"placeholder="Escriba El Responsable del Comite" th:field="*{responsablecomite}"/>
                 </div>
-            </div>
+            </div>-->
             
             <div class="form-group">
-                <label class="col-sm-2 control-label">Descripcion:</label>
+                <label class="col-sm-2 control-label ">Descripcion:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{desripcioncomite}"/>
+                    <input type="text" class="form-control"required="true" size="100" maxlength="100" placeholder="Escriba la Descripcion del comite" th:field="*{desripcioncomite}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Numero de acuerdo:</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" onkeypress="return valida(event)" th:field="*{numeroacuerdocomite}"/>
+                    <input type="text" class="form-control numeros" required="true" placeholder="Escriba solo Numeros Positivos"  th:field="*{numeroacuerdocomite}"/>
                 </div>
             </div>
             
@@ -59,28 +72,23 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Miembros maximos:</label>
                 <div class="col-sm-10">
-                    <input type=number class="form-control" th:field="*{miembromaximo}"/>
+                    <input type="text" class="form-control numeros" required="true" placeholder="Escriba solo Numeros Positivos"  th:field="*{miembromaximo}"/>
                 </div>
             </div>
             
             <div class="form-group">
                 <label class="col-sm-2 control-label">Desde:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechadesdecomite}"/>
+                    <input type="text" class="form-control"  placeholder="YYYY-MM-DD" required="true" th:field="*{fechadesdecomite}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Hasta:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechahastacomite}"/>
+                    <input type="text" class="form-control fecha_dies"  placeholder="YYYY-MM-DD" required="true" th:field="*{fechahastacomite}"/>
                 </div>
             </div>
-        <div class="form-group">
-                <label class="col-sm-2 control-label">Codigo empleado:</label>
-                                     <div class="col-sm-10">
-               <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
-                                          </div>
-                                </div>
+        
             
 <!--            <div class="row">
                 
@@ -103,9 +111,7 @@
   <div class="col-md-12">
             <th:block th:include="../templates/footer"></th:block>
         </div>  
-   <script th:replace="factura/js/autocomplete-productos :: javascript"></script>
-<script>th:href="@{/js/validacion_controladores.js}" /></script>
-<script>th:href="@{/js/validacion_controladores2.js}" /></script>
+
    <script>
     $(document).ready(function () {
         $('#fechadesdecomite').datepicker({
@@ -118,28 +124,30 @@
     });
     
 </script>
-<script>// funcion para permitir solo numeros
-function valida(e){
-    tecla = (document.all) ? e.keyCode : e.which;
 
-    //Tecla de retroceso para borrar, siempre la permite
-    if (tecla==8){
-        return true;
-    }
-        
-    // Patron de entrada, en este caso solo acepta numeros
-    patron =/[0-9]/;
-    tecla_final = String.fromCharCode(tecla);
-    return patron.test(tecla_final);
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../comites/';
+       }); 
 }
-</script>
-<script>
-jQuery(function($){
-$("#telefono").mask("99/99/9999");
-$("#dui").mask("99999999-9");
-$("#nit").mask("9999-999999-999-9");
-});
-</script>
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script> 
 
 		
                 
