--- a/src/main/resources/templates/fragments/comite/comiteshow.html
+++ b/src/main/resources/templates/fragments/comite/comiteshow.html
@@ -19,7 +19,7 @@
                 <form class="form-horizontal">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo:</label>
+                            <label class="col-sm-5 control-label">codigo de Comite:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${comite.codigocomite}">codigo de comite</p></div>
                         </div>
@@ -80,6 +80,14 @@
                                 <p class="form-control-static" th:text="${comite.fechahastacomite}">Fecha hasta </p>
                             </div>
                         </div>
+                        
+                        <div class="form-group">
+                            <label class="col-sm-7 control-label">Empleado:</label>
+                            <div class="col-sm-5">
+                                <p class="form-control-static" th:text="${comite.codigoempleado.nombreempleado}">Fecha hasta </p>
+                            </div>
+                        </div>
+                        
                     </div> 
 
 
