--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
@@ -15,7 +15,7 @@
                 <th>Costo Persona</th>
                 <th>Numero de Personas</th>
                 <th>Costo de Capacitador</th>
-<!--                <th>Codigo Capacitacion</th>-->
+                <th>Nombre Capacitacion</th>
                 
                 <th>Acciones</th>
                 
@@ -25,16 +25,60 @@
                 <td align="center" th:text="${costocapacitacion.costopersona}">Costo Persona</td>
                 <td align="center" th:text="${costocapacitacion.numeropersona}">Numero de Personas</td>
                <td  align="center" th:text="${costocapacitacion.costocapacitador}">Costo de Capactador</td>
+               <!--imprimo el nombre de la capacitaion de la tabla capacitacion-->
+                <td  th:text="${costocapacitacion.codigocapacitacion.nombrecapacitacion}">Codigo Capacitacion</td>
 <!--               <td  th:text="${costocapacitacion.codigocapacitacion}">Codigo Capacitacion</td>-->
                
                 
                 
                 <td><a th:href="${'./show/' + costocapacitacion.codigocostocapacitacion}" class="btn btn-default">Mostrar</a>
                 <a th:href="${'./edit/' + costocapacitacion.codigocostocapacitacion}" class="btn btn-default">Edit</a>
-                <a th:href="${'./delete/' + costocapacitacion.codigocostocapacitacion}" class="btn btn-danger">Delete</a></td>
+               <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${costocapacitacion.codigocostocapacitacion} + '\');'" >Delete</a></td>
+                <!--<a th:href="${'./delete/' + costocapacitacion.codigocostocapacitacion}" class="btn btn-danger">Delete</a></td>-->
             </tr>
         </table>
     </div>
 </div>
+     <script th:inline="javascript">
+        $(document).ready(function () {
+    if([[${msg}]]===3){
+       swal({
+           
+                title: "Exito!",
+                text: "Registro Eliminado correctamente",
+                type: "success",
+                icon: "success",
+       }).then(function() {
+                location.href = '../../costocapacitaciones/';
+       }); 
+}
+    
+    if([[${msg}]]===4){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error al eliminar el registro",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+        
+        function eliminar(id) {
+            swal({
+                title: "Desea Eliminar?",
+                text: "favor confirme que desea eliminar este registro!",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            })
+                    .then((willDelete) => {
+                        if (willDelete) {
+                            location.href = './delete/' + id;
+                        } else {
+                            swal("Accion cancelada", "se ha cancelado la operaacion de eliminado", "error");
+                        }
+                    });
+        }
+    </script>
 </body>
 </html>
