--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
@@ -23,26 +23,29 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Costo Por Persona:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{costopersona}"/>
+                    <input type="text" class="form-control num_decimal" required="true" th:field="*{costopersona}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Numero de Personas:</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" th:field="*{numeropersona}"/>
+                    <input type="text" class="form-control numeros" required="true" th:field="*{numeropersona}"/>
                 </div>
             </div>
             
             <div class="form-group">
                 <label class="col-sm-2 control-label">Costo Capacitador:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{costocapacitador}"/>
+                    <input type="text" class="form-control num_decimal" required="true" th:field="*{costocapacitador}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">codigo de Capacitacion:</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>
+                    <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
+                                <option th:each="c:${capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
+                            </select>
+                    <!--<input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>-->
                 </div>
             </div>
             
@@ -76,6 +79,30 @@
             dateFormat: 'yy-mm-dd'
         });
     });
+    
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../costocapacitaciones/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script>
 </script>
 
 </body>	
