--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -14,45 +14,43 @@
             <h3>Detalle cuadro directivos</h3>
     <div>
         <form class="form-horizontal" th:object="${cuadrodirectivo}" th:action="@{../cuadrodirectivo}" method="post">
-<!--            <input type="hidden" th:field="*{codigocuadrodirectivo}"/>
-            <input type="hidden" th:field="*{responsablecuadrodirectivo}"/>-->
+
 <!--            <div class="form-group">
-                <label class="col-sm-2 control-label">Codigo de Beneficio:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{codigocuadrodirectivo}"/>
-                </div>
-            </div>-->
-            <div class="form-group">
                 <label class="col-sm-2 control-label">Responsaable:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{responsablecuadrodirectivo}"/>
+                    <input type="text" class="form-control" required="true" size="30" maxlength="30" th:field="*{responsablecuadrodirectivo}"/>
+                </div>
+            </div>-->
+ <div class="form-group">
+                <label class="col-sm-2 control-label">Responsable Directo:(*):</label>
+                <div class="col-sm-10">
+                     <select class="form-control" th:field="*{codigoempleado.codigoempleado}" >
+                                <option th:each="c:${empleados}" th:value="${c.codigoempleado}" th:text="${c.nombreempleado}"></option>
+                            </select>
+                   <!--<input type="text" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>-->
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">area:</label>
+                <label class="col-sm-2 control-label">area:(*)</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{area}"/>
+                    <input type="text" class="form-control" required="true" size="30" maxlength="30" th:field="*{area}"/>
                 </div>
             </div>
             
             <div class="form-group">
-                <label class="col-sm-2 control-label">Descripcion:</label>
+                <label class="col-sm-2 control-label">Descripcion:(*)</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{desripcioncuadrodirectivo}"/>
+                    <input type="text" class="form-control" required="true" size="100"maxlength="100" th:field="*{desripcioncuadrodirectivo}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">fecha presentacion:</label>
+                <label class="col-sm-2 control-label">fecha presentacion:(*)</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{fechapresentacion}"/>
                 </div>
             </div>
-  <div class="form-group">
-                <label class="col-sm-2 control-label">codigo emppleado:</label>
-                <div class="col-sm-10">
-                   <input type="text" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
-                </div>
-            </div>
+ <!--aca sirve para jalar los nombres de los empleados-->
+ 
             
                       
 <div class="col-md-12">
@@ -72,6 +70,29 @@
 <!--</div>-->
 
 </body>
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../cuadrodirectivos/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script> 
 <script>
     $(document).ready(function () {
         $('#fechapresentacion').datepicker({
@@ -82,4 +103,5 @@
         
     });
 </script>
+  
 </html>
