--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
@@ -22,7 +22,7 @@
             </tr>
             <tr th:each="cuadrodirectivo : ${cuadrodirectivos}">
                 <td th:text="${cuadrodirectivo.codigocuadrodirectivo}">Codigo</td>
-                <td th:text="${cuadrodirectivo.responsablecuadrodirectivo}">Responsable</td>
+                <!--<td th:text="${cuadrodirectivo.responsablecuadrodirectivo}">Responsable</td>-->
                 <td th:text="${cuadrodirectivo.area}">area</td>
                 <td th:text="${cuadrodirectivo.desripcioncuadrodirectivo}">Descripcion</td>
                 <td th:text="${#calendars.format(cuadrodirectivo.fechapresentacion, 'dd-MMM-yyyy')}">F. Presentacion</td>
@@ -31,11 +31,53 @@
                 
                 <td><a th:href="${'./show/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-default">Mostrar</a>
                 <a th:href="${'./edit/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-default">Edit</a>
-                <a th:href="${'./delete/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-danger">Delete</a>
+               <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${cuadrodirectivo.codigocuadrodirectivo} + '\');'" >Delete</a></td>
+                <!--<a th:href="${'./delete/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-danger">Delete</a>-->
                 </td>
             </tr>
         </table>
     </div>
 </div>
 </body>
+ <script th:inline="javascript">
+        $(document).ready(function () {
+    if([[${msg}]]===3){
+       swal({
+           
+                title: "Exito!",
+                text: "Registro Eliminado correctamente",
+                type: "success",
+                icon: "success",
+       }).then(function() {
+                location.href = '../../roles/';
+       }); 
+}
+    
+    if([[${msg}]]===4){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error al eliminar el registro",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+        
+        function eliminar(id) {
+            swal({
+                title: "Desea Eliminar?",
+                text: "favor confirme que desea eliminar este registro!",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            })
+                    .then((willDelete) => {
+                        if (willDelete) {
+                            location.href = './delete/' + id;
+                        } else {
+                            swal("Accion cancelada", "se ha cancelado la operaacion de eliminado", "error");
+                        }
+                    });
+        }
+    </script>
 </html>
