--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
@@ -23,12 +23,19 @@
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${cuadrodirectivo.codigocuadrodirectivo}">cuadro Id</p></div>
                 </div>
-                <div class="form-group">
+<!--                <div class="form-group">
                     <label class="col-sm-2 control-label">Responsable:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${cuadrodirectivo.responsablecuadrodirectivo}">Responsable</p>
                     </div>
-                </div>
+                </div>-->
+ <div class="form-group">
+                                    <label class="col-sm-2 control-label">Responsable</label>
+                                    <div class="col-sm-10">
+                                        <p class="form-control-static" th:text="${cuadrodirectivo.codigoempleado.nombreempleado}">Codigo Empleado</p>
+                                         <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
+                                    </div>
+                                </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">area:</label>
                     <div class="col-sm-10">
@@ -42,14 +49,17 @@
                         <p class="form-control-static" th:text="${cuadrodirectivo.desripcioncuadrodirectivo}">Descripcion</p>
                     </div>
                 </div>
+                
+               
+              
 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">contraseña:</label>
+                    <label class="col-sm-2 control-label">Fecha de Presentacion:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentacion, 'dd-MMM-yyyy')}">Valor de estado</p>
                     </div>
                 </div>
-
+                    <!--jala los empleados-->
                 
 
             </form>
