--- a/src/main/resources/templates/fragments/estado/estadoform.html
+++ b/src/main/resources/templates/fragments/estado/estadoform.html
@@ -25,13 +25,13 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nombre de estado:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{nombreestado}"/>
+                    <input type="text" class="form-control" required="true" size="50" maxlength="50" th:field="*{nombreestado}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Valor de estado:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{valorestado}"/>
+                    <input type="text" class="form-control" required="true" size="100" maxlength="100" th:field="*{valorestado}"/>
                 </div>
             </div>
       
