--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -36,6 +36,15 @@
                             <input type="text" class="form-control numeros" required="true" th:field="*{horasrecibidas}"/>
                         </div>
                     </div>
+                                 <div class="form-group">
+                        <label class="col-sm-2 control-label">Empleado:</label>
+                                             <div class="col-sm-10">
+                                                 <select class="form-control" th:field="*{codigoempleado.codigoempleado}" >
+                                        <option th:each="c:${empleados}" placeholder="Seleccionar empleado" th:value="${c.codigoempleado" th:text="${c. nombrecapacitacion}"></option>
+                                    </select>
+                       <input type="text" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
+                                                  </div>
+                                        </div>
 
                     <!--             <div class="form-group">
                          <label class="col-sm-2 control-label">Ubicacion:</label>
@@ -58,15 +67,7 @@
                                                    </div>
                                          </div>-->
 
-                    <!--             <div class="form-group">
-                        <label class="col-sm-2 control-label">Empleado:</label>
-                                             <div class="col-sm-10">
-                                                 <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
-                                        <option th:each="c:${capacitaciones}" placeholder="Seleccionar capacitacion" th:value="${c.codigocapacitacion" th:text="${c. nombrecapacitacion}"></option>
-                                    </select>
-                       <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
-                                                  </div>
-                                        </div>-->
+                   
                     <div class="form-group">
                         <label class="col-sm-2 control-label ">Telefono:</label>
                         <div class="col-sm-10">
